I continued working on the top part of the page. I'll have to figure out how to get the bottom border to go all the way across the page and the user icons to align to the right. I fixed my main which I had set to 0 auto and didn't want that. Aligned the words within the videos divs and bolded YouTube.

--- a/style.css
+++ b/style.css
@@ -1,33 +1,34 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 13px;
+    font-size: 14px;
 }
 
 header {
-    display:flex;
     border-bottom: 1px solid rgb(102, 102, 102);;
     /* position: fixed; */
+    width: 1261px;
+}
+
+.toptop {
+    display: flex;
 }
 
 .logo {
-flex: 1;
+flex: 0 1 100px;
 display: flex;
-justify-content: center;
-align-items: flex-start;
-
+padding: 20px 30px;
 }
+
 .logoimg {
 height: 30px;
 width: 92px;
-padding: 20px;
-margin-right: 20px;
+align-self: center;
 }
 
 .bar {
 flex: 3;
-margin-top: 10px;
+margin-top: 15px;
 }
-
 
 input {
     width: 600px;
@@ -36,52 +37,80 @@ input {
     padding-top: 5px; 
     padding-left: 14px;
     font-size: 14px;
-    
 }
 
 input::placeholder{
-    color: black;
-    
-    
+    color: black;   
 }
 
-.fa-search {
+.fa-times {
     position: absolute;
-    top: 35px;
-    z-index: 1;
-    left: 166px;
-    /* color: rgb(102, 102, 102); */
+    margin-left: -100px;
+    top: 36px;
+    color: #5F6368;
+    font-size: 20px;
+    padding-right: 10px;
+    border-right: 1px solid #5F6368;
+}
+
+.fa-microphone {
+    position: absolute;
+    margin-left: -60px;
+    top: 36px;
+    color: dodgerblue;
+    font-size: 20px;
+    padding-right: 5px;
+}
+
+form .fa-search {
+    position: absolute;
+    margin-left: -35px;
+    top: 36px;
+    color: dodgerblue;
+    font-size: 20px;
+    padding-right: 5px;
+    
     
 }
-/* form {
-    display: inline-flex;
-    flex: 1 1 600px;
-    border-radius: 24px;
-} */
 
-/* .searchIcon {
-    width: 40px;
-    height: 50px;
-    font-size: 20px;
-    float: left;
-    border: none;
-    background: #ddd;
-    padding: 6px 10px;
-    margin-top: 8px;
-
+.user {
+    flex: 0 1 100px;
+    display: flex;
+    justify-content: center;
+    }
     
-} */
+ .user>* {
+     align-self: center;
+ }   
+
+.user i {
+    flex: 1;
+    margin-right: 5px;
+    padding: 20px;
+}
+
+.user a {
+    text-decoration: none;
+    color: #5F6368;
+}
+
+.userimg {
+    height: 20px;
+    padding: 20px;
+    flex: 1;
+    padding-left: 2px;
+}
 
 .nav {
     list-style-type: none;
     display: flex;
-   
+    margin-left: 169px;
+    margin-bottom: 0;
 }
 
 .nav li {
     margin-right: 50px;
     margin-left: -30px;
-    
 }
 
 .nav i{
@@ -90,18 +119,12 @@ input::placeholder{
 }
 
 .active {
-    color: blue;
     border-bottom: 3px solid rgb(26,115,232);
     padding-bottom: 12px;
 }
 
-/* .fa-ellipsis-v{
-    display: block;
-    margin-right: 15px;
-} */
-
 .navr {
-    padding-left: 60px;
+    padding-left: 20px;
 }
 
 .nav a {
@@ -115,52 +138,8 @@ input::placeholder{
     border: 1px solid gray;
 }
 
-.user {
-flex: 1;
-/* border: 1px solid red; */
-display: flex;
-justify-content: center;
-align-items: flex-start;
-/* padding: 0;
-margin: 0; */
-
-/* white-space: nowrap; */
-}
-
-
-.user i {
-    flex: 1;
-    margin-right: 5px;
-    padding: 20px;
-    
-    
-}
-
-.user a {
-    text-decoration: none;
-    color: #5F6368;
-}
-
-.userimg {
-    height: 20px;
-    padding: 20px;
-    flex: 1;
-    
-    /* margin-left: 0; */
-    padding-left: 2px;
-}
-
-/* hr {
-    color: rgb(242, 242, 242);
-    width: 1830px;
-    /* position: relative;
-    top: 40px; */
-
-
 #main {
     width: 652px;
-    margin: 0 auto;
-    
     /* min-width: 833px; */
     /* margin-left: 164px; */
     /* position: relative;
@@ -173,15 +152,17 @@ main a {
 }
 
 .results {
-    
-    margin: 0 auto;
+    padding-top: 10px;
     max-width: 833px;
     margin-left: 164px;
-        /* clip: rect(1px, 1px, 1px, 1px); */
+}
+
+.about {
+    color: rgb(112, 117, 122);
+    font-size: 14px;
 }
 
 .res1, .res2, .res3, .res4, .res5, .res6 {
-    
     padding: 20px 0;
 }
 
@@ -207,14 +188,12 @@ a {
     justify-content: space-between;
     height: 300px;
     width: 652px;
-    
-    /* max-width: 600px; */
 }
+
 .vid1, .vid2, .vid3 {
     border: 1px solid #5F6368;
     border-radius: 8px;
     width: 211px;
-    
 }
 
 iframe {
@@ -223,7 +202,6 @@ iframe {
     width: 211px;
     margin-right: 10px;
     height: 120px;
-    
 }
 
 h3 {
@@ -236,6 +214,7 @@ h3 {
     height: 90px;
     margin-left: 10px;
     margin-right: 10px;
+    
     /* width: 178px; */
     /* text-align: center; */
 }
@@ -247,6 +226,15 @@ h3 {
     height: 70px;
     flex-direction: column;
     justify-content: flex-end;
+    margin-left: 10px;
+    margin-right: 10px;
+    color: #808080;
+}
+
+strong {
+    color: black;
+    font-weight: 100;
+  
 }
 
 .alsoask {
